--- a/pppppp/View/UserData/ProfileView/ProfileView.storyboard
+++ b/pppppp/View/UserData/ProfileView/ProfileView.storyboard
@@ -40,7 +40,7 @@
             </objects>
             <point key="canvasLocation" x="4680" y="430"/>
         </scene>
-        <!--Profile-->
+        <!--Profile View Controller-->
         <scene sceneID="1WQ-Jn-oWe">
             <objects>
                 <viewController modalPresentationStyle="fullScreen" id="n68-DN-VhL" customClass="ProfileViewController" customModule="pppppp" customModuleProvider="target" sceneMemberID="viewController">
@@ -48,32 +48,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qIj-nq-XZN">
-                                <rect key="frame" x="112" y="151" width="0.0" height="72"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="72" id="hnD-K8-PCv"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="32"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="ENr-7I-fkB">
-                                <rect key="frame" x="0.0" y="294" width="390" height="467"/>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Vj1-VL-8NM">
-                                    <size key="itemSize" width="128" height="128"/>
-                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                </collectionViewFlowLayout>
-                                <cells/>
-                            </collectionView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Gji-DF-TMj">
-                                <rect key="frame" x="0.0" y="294" width="390" height="467"/>
+                                <rect key="frame" x="0.0" y="195" width="390" height="566"/>
                                 <subviews>
                                     <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="insetGrouped" separatorStyle="default" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" estimatedSectionHeaderHeight="-1" sectionFooterHeight="18" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="J3b-i7-ahx">
-                                        <rect key="frame" x="0.0" y="205" width="390" height="262"/>
+                                        <rect key="frame" x="0.0" y="205" width="390" height="361"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                     </tableView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="STREAK" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jPb-GB-oHC">
@@ -118,19 +97,8 @@
                                     <constraint firstAttribute="bottom" secondItem="J3b-i7-ahx" secondAttribute="bottom" id="kog-iV-K7I"/>
                                 </constraints>
                             </view>
-                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="CQd-fR-N3q">
-                                <rect key="frame" x="24" y="243" width="342" height="32"/>
-                                <segments>
-                                    <segment title="Activity"/>
-                                    <segment title="FriendList"/>
-                                </segments>
-                                <color key="tintColor" red="1" green="1" blue="1" alpha="0.84999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
-                                <connections>
-                                    <action selector="segmentValueChangedWithSender:" destination="n68-DN-VhL" eventType="valueChanged" id="cxm-dP-AII"/>
-                                </connections>
-                            </segmentedControl>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="iSb-Ii-EMn">
-                                <rect key="frame" x="24" y="151" width="72" height="72"/>
+                                <rect key="frame" x="24" y="99" width="72" height="72"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="72" id="Xvi-NF-3lX"/>
@@ -138,7 +106,7 @@
                                 </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="taJ-vF-fMd">
-                                <rect key="frame" x="294" y="169.66666666666666" width="80" height="34.666666666666657"/>
+                                <rect key="frame" x="294" y="117.66666666666667" width="80" height="34.666666666666671"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="tinted" imagePlacement="leading" title="Edit" imagePadding="9" cornerStyle="capsule">
                                     <imageReference key="image" image="button:taJ-vF-fMd:image" catalog="system" symbolScale="medium" renderingMode="hierarchical-single">
@@ -155,31 +123,40 @@
                                     <action selector="editButtonPressed:" destination="n68-DN-VhL" eventType="touchUpInside" id="a49-iB-MwS"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2Ol-nN-Lti">
+                                <rect key="frame" x="197" y="117" width="72" height="35"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Button">
+                                    <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="friendListButton" destination="n68-DN-VhL" eventType="touchUpInside" id="msG-5s-QQN"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CDg-n6-akb">
+                                <rect key="frame" x="125" y="125" width="42" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="A8q-9m-zwg"/>
                         <color key="backgroundColor" red="0.070588235289999995" green="0.0" blue="0.29803921570000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="A8q-9m-zwg" firstAttribute="bottom" secondItem="Gji-DF-TMj" secondAttribute="bottom" id="3YY-K6-WdA"/>
-                            <constraint firstItem="A8q-9m-zwg" firstAttribute="trailing" secondItem="CQd-fR-N3q" secondAttribute="trailing" constant="24" id="3vl-E1-4s8"/>
                             <constraint firstItem="A8q-9m-zwg" firstAttribute="trailing" secondItem="taJ-vF-fMd" secondAttribute="trailing" constant="16" id="6Jl-eE-hK4"/>
                             <constraint firstItem="iSb-Ii-EMn" firstAttribute="centerY" secondItem="taJ-vF-fMd" secondAttribute="centerY" id="7rp-L3-Ubw"/>
-                            <constraint firstItem="Gji-DF-TMj" firstAttribute="top" secondItem="CQd-fR-N3q" secondAttribute="bottom" constant="20" id="CDo-yy-8BN"/>
                             <constraint firstItem="Gji-DF-TMj" firstAttribute="leading" secondItem="A8q-9m-zwg" secondAttribute="leading" id="Dn2-ug-xWw"/>
-                            <constraint firstItem="ENr-7I-fkB" firstAttribute="trailing" secondItem="A8q-9m-zwg" secondAttribute="trailing" id="InK-Ss-jon"/>
                             <constraint firstItem="iSb-Ii-EMn" firstAttribute="leading" secondItem="A8q-9m-zwg" secondAttribute="leading" constant="24" id="TIT-r7-FeB"/>
                             <constraint firstItem="iSb-Ii-EMn" firstAttribute="top" secondItem="A8q-9m-zwg" secondAttribute="top" constant="8" id="U6e-VE-Hvv"/>
-                            <constraint firstItem="CQd-fR-N3q" firstAttribute="leading" secondItem="A8q-9m-zwg" secondAttribute="leading" constant="24" id="V9e-a1-QSi"/>
-                            <constraint firstItem="qIj-nq-XZN" firstAttribute="top" secondItem="HJr-r8-Ssq" secondAttribute="topMargin" constant="8" id="Yfo-G7-hFR"/>
-                            <constraint firstItem="CQd-fR-N3q" firstAttribute="top" secondItem="iSb-Ii-EMn" secondAttribute="bottom" constant="20" id="cSC-OT-nqS"/>
-                            <constraint firstItem="ENr-7I-fkB" firstAttribute="leading" secondItem="A8q-9m-zwg" secondAttribute="leading" id="eAN-UK-E1n"/>
-                            <constraint firstItem="qIj-nq-XZN" firstAttribute="leading" secondItem="iSb-Ii-EMn" secondAttribute="trailing" constant="16" id="fhs-Zp-RSl"/>
-                            <constraint firstItem="ENr-7I-fkB" firstAttribute="top" secondItem="CQd-fR-N3q" secondAttribute="bottom" constant="20" id="mmH-Zb-yBW"/>
+                            <constraint firstItem="Gji-DF-TMj" firstAttribute="top" secondItem="iSb-Ii-EMn" secondAttribute="bottom" constant="24" id="bRM-k8-lFI"/>
                             <constraint firstItem="Gji-DF-TMj" firstAttribute="trailing" secondItem="A8q-9m-zwg" secondAttribute="trailing" id="wpj-GD-nos"/>
-                            <constraint firstItem="A8q-9m-zwg" firstAttribute="bottom" secondItem="ENr-7I-fkB" secondAttribute="bottom" id="z4M-QH-4Sj"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="Profile" largeTitleDisplayMode="always" id="dMA-qW-h1S">
+                    <navigationItem key="navigationItem" largeTitleDisplayMode="always" id="dMA-qW-h1S">
                         <rightBarButtonItems>
                             <barButtonItem title="Item" image="barButtonItem:0eg-Iq-DiZ:image" catalog="system" id="0eg-Iq-DiZ">
                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -199,9 +176,7 @@
                     <connections>
                         <outlet property="activityBackgroundView" destination="Gji-DF-TMj" id="fhv-9a-IDy"/>
                         <outlet property="collectionView" destination="lAc-Rk-I35" id="vAJ-kX-7pr"/>
-                        <outlet property="friendcollectionView" destination="ENr-7I-fkB" id="XK4-wB-Mce"/>
                         <outlet property="myIconView" destination="iSb-Ii-EMn" id="0Fo-K0-UB2"/>
-                        <outlet property="myNameLabel" destination="qIj-nq-XZN" id="Iu2-qn-orw"/>
                         <outlet property="tableView" destination="J3b-i7-ahx" id="hT1-F1-GIS"/>
                     </connections>
                 </viewController>
